--- a/src/styles/layout/_project_table_view_layout.sass
+++ b/src/styles/layout/_project_table_view_layout.sass
@@ -31,11 +31,11 @@
             position: relative
 
             .id
-              padding-left: ($gutter * 8) - $selection-border-thickness
+              padding-left: ($gutter * 12) - $selection-border-thickness
 
           .cell
             box-sizing: border-box
-            padding: 0 $gutter * 8
+            padding: 0 ($gutter * 12)
             text-align: left
             white-space: nowrap
 
