--- a/src/styles/material/_bad_news_material.sass
+++ b/src/styles/material/_bad_news_material.sass
@@ -96,7 +96,6 @@
           .row
             &.selected-item
               background: $selected-item-color
-              border-left: $selection-border-thickness solid $primary-color
 
               td
                 &:first-child
