--- a/src/styles/material/_good_news_material.sass
+++ b/src/styles/material/_good_news_material.sass
@@ -41,6 +41,10 @@
           border-bottom: 1px solid $dark-tertiary-color
           cursor: pointer
 
+          .cell
+            background: $tertiary-color
+            border-bottom: 1px solid $dark-tertiary-color
+
           .active-sorting,
           .active-filtering
             color: $secondary-color
@@ -92,7 +96,10 @@
           .row
             &.selected-item
               background: $selected-item-color
-              border-left: $selection-border-thickness solid $primary-color
+
+              td
+                &:first-child
+                  border-left: $selection-border-thickness solid $primary-color
 
               .tempo
                 .tempo-card
